--- a/Obfuscate.yml
+++ b/Obfuscate.yml
@@ -1,4 +1,4 @@
-name: Build Obfuscate BPB Panel
+name: Build BPB Worker
 
 on:
   push:
@@ -24,17 +24,29 @@ jobs:
         with:
           node-version: "latest"
 
+      - name: Clone BPB project
+        run: |
+          cd worker/bpb
+          git clone https://github.com/bia-pain-bache/BPB-Worker-Panel.git
+          cd BPB-Worker-Panel
+
       - name: Install dependencies
         run: |
-          npm install -g javascript-obfuscator
+          cd worker/bpb/BPB-Worker-Panel
+          npm install
 
-      - name: Clone BPB workjs
+      - name: Build project
         run: |
-          wget -O origin.js https://raw.githubusercontent.com/bia-pain-bache/BPB-Worker-Panel/refs/heads/main/build/unobfuscated-worker.js
+          cd worker/bpb/BPB-Worker-Panel
+          npx wrangler deploy src/worker.js --name bpb-worker-panel --compatibility-flag [nodejs_compat] --compatibility-date 2024-10-26 --dry-run --outdir=dist
+          cp -f dist/worker.js ../origin.js
+          cd ..
+          rm -rf BPB-Worker-Panel
       
       - name: Obfuscate BPB worker js
         run: |
-          javascript-obfuscator origin.js --output _worker.js \
+          npm install -g javascript-obfuscator
+          javascript-obfuscator worker/bpb/origin.js --output worker/bpb/_worker.js \
           --compact true \
           --control-flow-flattening true \
           --control-flow-flattening-threshold 1 \
@@ -52,6 +64,6 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           branch: main
-          commit_message: ':arrow_up: update latest bpb panel'
+          commit_message: ':arrow_up: update latest bpb worker'
           commit_author: 'github-actions[bot] <github-actions[bot]@users.noreply.github.com>'
           push_options: '--set-upstream'
